creada lazy load con deacoreadors. Decorador: viewchield

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
 	<a routerLink="/villane-center">Villane</a>
 	<a routerLink="/zoom">Zoom</a>
 	<a routerLink="/mrfantastic">Mr.Fantastic</a>
+	
+	<a routerLink="/decorators">Decoradores Villanos</a>
 </div>
 
 
