--- a/src/app/decorators/decorators.component.html
+++ b/src/app/decorators/decorators.component.html
@@ -6,7 +6,8 @@
 
 <div>
 	<h2>Villanos</h2>
-	<a routerLink="decorators/joker">joker</a>
+	<a routerLink="decorators/joker">Joker</a>
+	<a routerLink="decorators/quinn">Harley Quinn</a>
 </div>
 
 
